# rtd-iqm-data

./: .gitignore  CLAUDE.md  README.md  generate_index.py  pyproject.toml  scraper.py
.github/workflows/: scrape-meetings.yml
meetings/: index.md
meetings/1045/: metadata.json
meetings/1046/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1067/: agenda.txt  details.md  metadata.json  minutes.txt
meetings/1070/: agenda.txt  metadata.json  minutes.txt
meetings/1072/: agenda.txt  metadata.json  minutes.txt
meetings/1073/: agenda.txt  metadata.json  minutes.txt
meetings/1074/: agenda.txt  details.md  metadata.json  minutes.txt
meetings/1075/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1076/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1077/: agenda.txt  details.md  metadata.json  minutes.txt
meetings/1078/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1079/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1080/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1095/: metadata.json
meetings/1096/: agenda.txt  details.md  metadata.json  minutes.txt  packet.txt
meetings/1097/: agenda.txt  details.md  metadata.json  packet.txt
meetings/1098/: agenda.txt  metadata.json  minutes.txt  packet.txt
meetings/1108/: agenda.txt  details.md  metadata.json  minutes.txt
meetings/1109/: agenda.txt  metadata.json  minutes.txt
meetings/1111/: agenda.txt  details.md  metadata.json  minutes.txt
(+9079 files in other folders)
